# archive-patcher-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties
.github/workflows/: ci.yml  release.yml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  allowed-licenses.json  build.gradle.kts
lib/src/androidTest/java/com/eidu/archivepatcher/: CompatibilityTest.java
lib/src/androidTest/java/com/eidu/zip/: AndroidDeflaterTest.java  CompatibilityTest.java
lib/src/androidTest/resources/: base-to-expected.patch
lib/src/main/: AndroidManifest.xml
lib/src/main/java/com/eidu/archivepatcher/: AndroidFileByFileV1DeltaApplier.java
lib/src/main/java/com/eidu/zip/: AndroidDeflater.java  AndroidFileByFileV1DeltaApplier.java  ZStreamRef.java
lib/src/main/jni/: AndroidDeflater.c
